--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.70.0",
+    "sonner": "^1.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
